feat: 添加项目初始化活动和数据库迁移功能
- 新增ProjectInitializationActivity类，负责项目的初始化逻辑，确保在项目打开时进行必要的设置和资源管理。
- 在PrivateReaderStartupActivity中集成数据库迁移功能，确保在应用启动时检查并执行数据库迁移。
- 删除不再使用的ProjectOpenListener类，简化项目结构，提升可维护性。
- 更新plugin.xml以注册新的项目初始化活动，确保在项目启动时正确执行初始化逻辑。